feat(OutputView): 추천 메뉴 출력 기능 구현